add solarized styles, initial logo placement

--- a/css/all.css
+++ b/css/all.css
@@ -1,7 +1,37 @@
+body {
+  font-family: 'Andale Mono', 'Courier New', monospace;
+  background: #eee8d5;
+  color: #586e75;
+}
+
+#logo {
+  height: 3.1em;
+  float: left;
+}
+
+/*
+$base03:    #002b36;
+$base02:    #073642;
+$base01:    #586e75;
+$base00:    #657b83;
+$base0:     #839496;
+$base1:     #93a1a1;
+$base2:     #eee8d5;
+$base3:     #fdf6e3;
+$yellow:    #b58900;
+$orange:    #cb4b16;
+$red:       #dc322f;
+$magenta:   #d33682;
+$violet:    #6c71c4;
+$blue:      #268bd2;
+$cyan:      #2aa198;
+$green:     #859900;
+*/
+
 .section {
   border-bottom: 1px black dotted;
   margin-bottom: 20px;
-  height: 500px;
+  height: 550px;
 }
 
 .smaller {
@@ -29,6 +59,18 @@
 }
 .secondrow p {
   margin-left: 5%;
+}
+
+
+/*** FIRST ROW ***/
+#me-images {
+  margin-top: 3em;
+}
+
+#row-intro h1 {
+  color: #268bd2;
+  font-size: 3em;
+  padding: 1em 0;
 }
 
 #doorway {
@@ -62,6 +104,21 @@
   z-index: 1;
 }
 
+/*** YAMMER ROW ***/
+#row-yammer {
+  height: 550px;
+}
+
+/*** QUID ROW ***/
+#row-quid {
+  height: 510px;
+}
+
+.black {
+  margin: -10px -10px;
+  background-color: black;
+}
+
 #network {
   top: 130px;
   z-index: 1;
@@ -72,45 +129,54 @@
   -webkit-transform: rotate(30deg);
 }
 
-body {
-  background: #CEEDED;
-  color: #555;
-}
-
-/*  Yammer  */
-#row-yammer {
-  height: 550px;
-}
-
-
-#row-quid {
-  height: 510px;
-}
-
-.black {
-  margin: -10px -10px;
-  background-color: black;
-}
-
+/*** APPLE ROW ***/
 #apple {
   padding-left: 11%;
 }
 
-#row-intro h1 {
-  font-size: 3em;
-  padding: 1em 0;
+
+/*** TYPOGRAPHY ***/
+h1 {
+/*
+$yellow:    #b58900;
+$orange:    #cb4b16;
+$red:       #dc322f;
+$magenta:   #d33682;
+$violet:    #6c71c4;
+$blue:      #268bd2;
+$cyan:      #2aa198;
+$green:     #859900;
+*/
+  color: #2aa198;
+  font-family: 'Courier New';
+
+}
+
+.quote {
+  padding-left: 2em;
+  font-family: 'Kotta One', Arial, sans-serif;
+  font-weight: bolder;
+}
+.quote p {
+  font-size: 20px;
+}
+
+.company-name {
+  color: #268bd2;
 }
 
 h4 {
+  color: #839496;
   padding-bottom: 1em;
 }
 
 p {
-  font-size: 18px;
+  font-size: 15px;
   line-height: 22px;
 }
 
 .emphasize {
   font-weight: bold;
   font-size: em;
+  color: /*$orange */    #cb4b16;
 }
